added pics (working now)

--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Election Results</title>
 
-    <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="css/style.css" rel="stylesheet">
+  
   </head>
   <body>
+    <div class="d-flex justify-content-between">
+      <div>
+        <img src="images/swiss.jpg" alt="Swiss Flag" width="8%">
+      </div>
+ </div>
     <div class="container" style="width: 650px;">
       <div class="row">
         <div class="col-lg-12">
@@ -41,6 +40,8 @@
             <hr/>
             <form onSubmit="App.castVote(); return false;">
               <div class="form-group">
+                <img src="images/bmw.png" alt="bmw" width="8%">
+                <img src="images/jet.jpg" alt="jet" width="8%">
                 <label for="candidatesSelect">Select Candidate</label>
                 <select class="form-control" id="candidatesSelect">
                 </select>
