changed the pics to the candidates + infos

--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,14 @@
             <hr/>
             <form onSubmit="App.castVote(); return false;">
               <div class="form-group">
-                <img src="images/bmw.png" alt="bmw" width="8%">
-                <img src="images/jet.jpg" alt="jet" width="8%">
+                <img src="images/cat_1.jpg" id="candidate1" alt="Candidate 1" width="15%">
+                <label for="candidate1">Candidate 1<br>Info:<br>Swiss Democracy Party</label>
+                
+                <br>
+                <img src="images/cat_2.jpg" id="candidate2"alt="Candidate 2" width="15%">
+                <label for="candidate2">Candidate 2<br>Info:<br>Swiss Communism Party</label>
+                <br>
+                <br>
                 <label for="candidatesSelect">Select Candidate</label>
                 <select class="form-control" id="candidatesSelect">
                 </select>
